--- a/res/layout/label_item.xml
+++ b/res/layout/label_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:minHeight="40dip"
-	android:background="@android:color/white">
+	android:layout_width="fill_parent" android:minHeight="50dip"
+	android:background="@drawable/label_item_selctor">
 
-   <TextView android:id="@+id/label_name" android:text="11ssss1"
+   <TextView android:id="@+id/label_name" android:textSize="18sp" 
         android:layout_marginLeft="10dip" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:layout_centerVertical="true" 
         android:textColor="@color/black" android:textStyle="bold" />
