--- a/res/layout/memos_main.xml
+++ b/res/layout/memos_main.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
-	<LinearLayout android:id="@+id/record_time_bar"
-		android:background="@color/red" android:gravity="center"
-		android:orientation="horizontal" android:layout_width="fill_parent"
-		android:layout_height="30dip" android:visibility="gone">
-		<TextView android:id="@+id/record_time" android:textColor="@color/white"
-			android:textStyle="bold" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" />
-	</LinearLayout>
+
 	<LinearLayout android:orientation="vertical"
 		android:layout_width="fill_parent" android:layout_height="fill_parent">
 
@@ -17,20 +10,28 @@
 			android:layout_height="wrap_content" android:src="@drawable/main_microphone" />
 
 		<RelativeLayout android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:background="@drawable/main_operator_bg">
+			android:layout_height="120dip" android:background="@drawable/main_operator_bg">
 			<ImageView android:id="@+id/start_record"
 				android:layout_width="wrap_content" android:layout_marginLeft="10dip"
 				android:layout_height="wrap_content" android:src="@drawable/main_record_selector"
 				android:layout_centerVertical="true" android:layout_alignParentLeft="true" />
-			<org.espier.voicememos.ui.VUMeter
-				android:id="@+id/uvmeter" android:layout_width="800px"
-				android:layout_height="190px" android:layout_centerInParent="true" />
 			<ImageView android:layout_width="wrap_content" android:id="@+id/list_record"
 				android:layout_marginRight="10dip" android:layout_height="wrap_content"
 				android:src="@drawable/main_list_selector"
 				android:layout_centerVertical="true"
 				android:layout_alignParentRight="true" />
+			<org.espier.voicememos.ui.VUMeter
+				android:id="@+id/uvmeter" android:layout_height="190px"
+				android:layout_width="800px" android:layout_centerInParent="true"/>
 
 		</RelativeLayout>
+	</LinearLayout>
+	<LinearLayout android:id="@+id/record_time_bar"
+		android:background="@color/red" android:gravity="center"
+		android:orientation="horizontal" android:layout_width="fill_parent"
+		android:layout_height="30dip" android:visibility="gone">
+		<TextView android:id="@+id/record_time" android:textColor="@color/white"
+			android:textStyle="bold" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" />
 	</LinearLayout>
 </FrameLayout>
