--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string-array name="labels">
-		<item>无</item>
+		<item>None</item>
 		<item>Podcast</item>
-		<item>采访</item>
-		<item>演讲</item>
-		<item>主意</item>
-		<item>会议</item>
-		<item>备忘录</item>
-		<item>自定</item>
+		<item>Interview</item>
+		<item>Lecture</item>
+		<item>Idea</item>
+		<item>Meeting</item>
+		<item>Memo</item>
+		<item>Custom</item>
 	</string-array>
 </resources>
