--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -149,4 +149,5 @@
 	<color name="navy">#000080</color><!--海军色 -->
 	<color name="black">#000000</color><!--黑色 -->
 
+    <color name="bar_blue">#0479EF</color><!--黑色 -->
 </resources>
