--- a/res/layout/label_custom.xml
+++ b/res/layout/label_custom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	android:background="@drawable/detail_bg" android:orientation="vertical">
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -37,7 +37,7 @@
 
 	</LinearLayout>
 
-	<LinearLayout android:layout_width="fill_parent"
+	<LinearLayout android:layout_width="fill_parent" android:layout_centerInParent="true"
 		android:layout_height="wrap_content" android:background="@drawable/custom_label_bg"
 		android:layout_gravity="center_vertical" android:gravity="center_vertical"
 		android:layout_marginTop="100dip" android:layout_marginLeft="20dip"
@@ -51,4 +51,4 @@
 			android:background="@drawable/label_clear" />
 	</LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
