--- a/res/layout/memos_detail.xml
+++ b/res/layout/memos_detail.xml
@@ -52,8 +52,9 @@
 			android:layout_weight="1" android:orientation="vertical">
 
 			<TextView android:id="@+id/detail_label"
-				android:layout_width="wrap_content" android:layout_height="wrap_content"
+				android:layout_height="wrap_content"
 				android:textColor="@color/black" android:textStyle="bold"
+				android:layout_width="150dip" android:singleLine="true"
 				android:textSize="18sp" />
 
 			<TextView android:id="@+id/detail_duration"
