--- a/res/layout/memos_item.xml
+++ b/res/layout/memos_item.xml
@@ -13,8 +13,9 @@
 		android:layout_marginLeft="5dip" android:layout_centerVertical="true"
 		android:orientation="vertical">
 		<TextView android:id="@+id/memos_item_title"
+		    android:ellipsize = "end"
 			android:textColor="@color/black" android:textStyle="bold"
-			android:layout_width="wrap_content" 
+			android:layout_width="150dip" android:singleLine="true"
 			android:textSize="18sp" android:layout_height="wrap_content" />
 
 		<TextView android:id="@+id/memos_item_create_date"
