--- a/res/layout/memos_list.xml
+++ b/res/layout/memos_list.xml
@@ -11,7 +11,8 @@
 			android:layout_height="wrap_content" android:ellipsize="end"
 			android:layout_centerVertical="true"
 			android:shadowColor="@color/ios_navigation_bar_title_shadow_color"
-			android:singleLine="true" android:textColor="@color/ios_navigation_bar_title_color"
+			android:shadowDy="-2" android:shadowRadius="1" android:singleLine="true"
+			android:textColor="@color/ios_navigation_bar_title_color"
 			android:textSize="@dimen/ios_activity_title_size" />
 
 		<Button android:id="@+id/memo_list_finish"
@@ -32,7 +33,7 @@
 		android:layout_height="fill_parent" android:layout_weight="1" />
 
 	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:background="@drawable/list_buttom_bg"
+		android:layout_height="160dip" android:background="@drawable/list_buttom_bg"
 		android:orientation="vertical">
 
 		<LinearLayout android:layout_width="fill_parent"
