--- a/res/layout/memos_main.xml
+++ b/res/layout/memos_main.xml
@@ -6,7 +6,7 @@
 		android:layout_width="fill_parent" android:layout_height="fill_parent">
 
 		<ImageView android:id="@+id/microphone"
-			android:layout_width="fill_parent" android:layout_weight="1"
+			android:layout_width="fill_parent" android:layout_weight="1" android:scaleType="fitXY"
 			android:layout_height="wrap_content" android:src="@drawable/main_microphone" />
 
 		<RelativeLayout android:layout_width="fill_parent"
@@ -20,7 +20,7 @@
 				android:src="@drawable/main_list_selector"
 				android:layout_centerVertical="true"
 				android:layout_alignParentRight="true" />
-			<org.espier.voicememos.ui.VUMeter
+			<org.espier.voicememos6.ui.VUMeter
 				android:id="@+id/uvmeter" android:layout_height="190px"
 				android:layout_width="800px" android:layout_centerInParent="true"/>
 
